--- a/output.css
+++ b/output.css
@@ -1328,6 +1328,21 @@ iframe {
   margin-right: 50px;
 }
 
+@media screen and (max-width: 600px) {
+  iframe {
+    justify-content: center;
+    position: relative;
+    box-shadow: 0px 0px 100px #000;
+    border-style:none;
+    margin-top: 100px;  
+    width: 50%;
+  }
+  img {
+    width: 30%;
+    height: 50%;
+  }
+}
+
 
 .flex-container {
   width: 100%;
@@ -1382,8 +1397,8 @@ border:0;
 cursor: pointer;
 text-decoration: none;
 position: relative;
-color: #000;
-background: #ffffff;
+color: #fff;
+background: none;
 line-height: 30px;
 margin-top: 100px;
 border-radius: 40px;
@@ -1393,10 +1408,11 @@ font-weight: 600;
 box-shadow: rgb(0, 229, 255) -2px -2px 0px 2px, rgb(255, 42, 198) 0px 0px 0px 4px, rgba(0, 0, 0, 0.05) 0px 0px 2px 7px;
 transition: all 0.2s;
 }
-.button-78:hover{
+.button-78:hover {
   box-shadow: rgb(255, 42, 198) -2px -2px 0px 2px, rgb(0, 229, 255) 0px 0px 0px 4px, rgba(0, 0, 0, 0.05) 0px 0px 2px 7px;
-  transform: scale(1.01);
+  transform: scale(1.02);
 }
+
 .button-79 {
   display: inline-block;
   outline: 0;
@@ -1404,8 +1420,8 @@ transition: all 0.2s;
   cursor: pointer;
   text-decoration: none;
   position: relative;
-  color: #000;
-  background: #ffffff;
+  color: #fff;
+  background: none;
   line-height: 30px;
   margin-top: 100px;
   border-radius: 40px;
@@ -1417,7 +1433,7 @@ transition: all 0.2s;
   }
   .button-79:hover{
     box-shadow: rgb(17, 255, 160) -2px -2px 0px 2px, rgb(0, 170, 255) 0px 0px 0px 4px, rgba(0, 0, 0, 0.05) 0px 0px 2px 7px;
-    transform: scale(1.01);
+    transform: scale(1.02);
   }
 
 .button-80 {
